Split retrievers Some small renaming (but still not sure what I am going for ;) )

--- a/SimplyCrawl.Frontend/SimplyCrawl.Frontend.csproj
+++ b/SimplyCrawl.Frontend/SimplyCrawl.Frontend.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="System.Net.Http" Version="4.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SimplyCrawl.Crawlers\SimplyCrawl.Crawlers.csproj" />
     <ProjectReference Include="..\SimplyCrawl.Library\SimplyCrawl.Library.csproj" />
   </ItemGroup>
 </Project>
